# RoboWhip

./: .gitignore  LICENSE  package-lock.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package.json
frontend/src/: App.jsx
