[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime and networking web framework
tokio = { version = "1.38", features = ["full"] }
axum = "0.7.5"

# Serialization / Deserialization (Translating Rust structs to/from JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Middleware layer to allow your React app to safely query this server
tower-http = { version = "0.5.2", features = ["cors"] }

# Asynchronous SQL driver for PostgreSQL with compile-time query verification
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }